<resources>
    <string name="app_name">PokeCard</string>
    <string name="pokecard">PokeCard</string>
    <string name="user">Utilisateur</string>
    <string name="pdw">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="newuser">Nouvel Utilisateur ?</string>
    <string name="createuser">Créer le compte</string>
    <string name="email">Email</string>
    <string name="alreadyCompte">Déjà un compte ?</string>
    <string name="collection">Ma Collection</string>
    <string name="allPokemon">Tous les Pokemons</string>
    <string name="author">By Thomas Chaboud &amp; Adeline Dumas</string>
    <string name="facebook_app_id">729371463940119</string>
    <string name="fb_login_protocol_scheme">fb729371463940119</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pokemon_detail_adapter">PokemonDetailAdapter</string>

    <string name="searchFriend">Rechercher un ami</string>
    <string name="search">Rechercher</string>
    <string name="friend">Mes amis</string>
    <string name="add">Ajouter</string>
    <string name="echange">Echanger</string>
</resources>
