<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.groupe3.iem.pokecard.Vue.Activity.NewUserActivity"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPokecard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/pokecard" />

            <TextView
                android:id="@+id/textViewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="casual"
                android:text="@string/user"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/email"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/pdw"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonCreateUSer"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/drawable"
                android:elevation="0dp"
                android:fontFamily="casual"
                android:text="@string/createuser"
                android:textAlignment="center"
                android:textColorLink="@android:color/holo_orange_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAlreadyCompte"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="0dp"
                android:fontFamily="casual"
                android:text="@string/alreadyCompte"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>

